Update to ash-main

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ log = "0.4"
 thiserror = "1.0"
 # Only needed for vulkan.  Disable all default features as good practice,
 # such as the ability to link/load a Vulkan library.
-ash = { version = ">=0.34, <=0.37", optional = true, default-features = false, features = ["debug"] }
+ash = { git = "https://github.com/ash-rs/ash", rev = "51f5997", optional = true, default-features = false, features = ["debug"] }
+# ash = { version = ">=0.34, <=0.37", optional = true, default-features = false, features = ["debug"] }
 # Only needed for visualizer.
 imgui = { version = "0.8", features = ["tables-api"], optional = true }
 
@@ -46,7 +47,7 @@ optional = true
 
 [dev-dependencies]
 # Enable the "loaded" feature to be able to access the Vulkan entrypoint.
-ash = { version = "0.37", default-features = false, features = ["debug", "loaded"] }
+ash = { git = "https://github.com/ash-rs/ash", rev = "51f5997", default-features = false, features = ["debug", "loaded"] }
 ash-window = "0.10.0"
 raw-window-handle = "0.4"
 winit = "0.26"
